--- a/index.html
+++ b/index.html
@@ -65,6 +65,7 @@
     <!--Google Maps-->
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCGc1IlCuJd173d1Q1685Eya-Cs7NJ5HOU"></script>
     <script src="/js/maps.js"></script>
+    <script src="/js/hgmap.js"></script>
 
     <script src="/fancybox/jquery.fancybox.pack.js"></script>
     <script src="/fancybox/jquery.fancybox.js"></script>
@@ -82,7 +83,7 @@
     <div id="header" class="container-fluid headerdark">
         <div id="sysmsg" class="col-xs-12 col-md-12 col-sm-12 col-lg-12 text-center myhide">Системное сообщение: <span id="sysmsg_val"></span></div>
         <div id="emer_code" class="col-xs-12 col-md-12 col-sm-12 col-lg-12 text-center myhide">ВНИМАНИЕ!!! <span id="emer_code_msg"></span></div>
-        <div id="console" class="col-xs-12 col-md-12 col-sm-12 col-lg-12 hideconsole">console started...<br>Loading sources...<br></div>
+        <div id="console" class="col-xs-12 col-md-12 col-sm-12 col-lg-12 hideconsole"></div>
 
         <div class="logo col-lg-2 col-md-2 hidden-sm hidden-xs">HELL GAME</div>
         <div class="logo col-xs-12 visible-xs visible-sm text-center">HELL GAME</div>
@@ -359,8 +360,12 @@
             <div class="row">
                 <div class="uc_col col-lg-12 col-md-12 col-sm-12 col-xs-12 text-center">
                     <div class="uc_card">Карта HellGame</div>
-                    <button class="btn btn-danger btn_clshgmap"><i class="fa fa-close"></i>Закрыть</button>
-                    <iframe src="https://www.google.com/maps/d/embed?mid=1TWBleNHM6raePemmYEtRetPZLZ4&hl=ru" width="100%" height="500"></iframe>
+                    <div id="hgmapcontainer"></div>
+
+                    <button id="mc_btnsub" class="btn btn-success btn-group-sm hidden"><i class="fa fa-user-plus"></i> Добавить монстра</button>
+					<button class="btn btn-warning btn_addmonsterHgmap hidden"><i class="fa fa-plus"></i> Создать монстра</button>
+					<button class="btn btn-warning btn_delmonsterHgmap hidden"><i class="fa fa-trash"></i> Удалить монстра</button>
+                    <button id="mc_btncancel" class="btn btn-danger btn-group-sm">Отмена</button>
                 </div>
             </div>
         </div>
@@ -459,66 +464,73 @@
             <div class="row">
                 <div class="uc_weather">Телеметрия</div>
                 <div class="container-fluid">
-                    <div class="col-lg-2 col-md-2 col-sm-2 col-xs-4">
-                        <div class="wh_icon" id="wh_icon_refresh"></div>
-                        <div class="h_led" id="wh_refresh_led"></div>
-                        <div>
-                            <div class="wh_updated wh_label wh_val hidden hidden-sm hidden-xs">Обновлено:</div>
-                            <div class="wh_val"><span id="wh_upd_val">---</span></div>
-                        </div>
-                    </div>
-                    <div class="col-lg-2 col-md-2 col-sm-2 col-xs-4">
-                        <div class="wh_icon" id="wh_icon_wind"></div>
-                        <div class="h_led" id="wh_wind_led"></div>
-                        <div id="wh_wind">
-                            <div class="wh_label hidden hidden-sm hidden-xs">Скорость ветра</div>
-                            <div class="wh_val"><span id="wh_wind_val">---</span> м/c</div>
-                        </div>
-                    </div>
-                    <div class="col-lg-2 col-md-2 col-sm-2 col-xs-4">
-                        <div class="wh_icon" id="wh_icon_temp0">
-                            <div class="wh_suffix">Воздух</div>
-                        </div>
-                        <div class="h_led" id="wh_temp0_led"></div>
-                        <div id="wh_temp1">
-                            <div class="wh_label hidden hidden-sm hidden-xs">Температура воздуха</div>
-                            <div class="wh_val"><span id="wh_temp1_val">---</span> &deg;C</div>
-                        </div>
-                    </div>
-                    <div class="col-lg-2 col-md-2 col-sm-2 col-xs-4">
-                        <div class="wh_icon" id="wh_icon_tempavg">
-                            <div class="wh_suffix">Средняя</div>
-                        </div>
-                        <div class="h_led" id="wh_tempavg_led"></div>
-                        <div id="wh_tempavg">
-                            <div class="wh_label hidden hidden-sm hidden-xs">Средняя темпаратура воздуха</div>
-                            <div class="wh_val"><span id="wh_tempavg_val">---</span> &deg;C</div>
-                        </div>
-                    </div>
-                    <div class="col-lg-2 col-md-2 col-sm-2 col-xs-4">
-                        <div class="wh_icon" id="wh_icon_temp15">
-                            <div class="wh_suffix">15см</div>
-                        </div>
-                        <div class="h_led" id="wh_temp15_led"></div>
-                        <div id="wh_temp2">
-                            <div class="wh_label hidden hidden-sm hidden-xs">Т. земли 15см</div>
-                            <div class="wh_val"><span id="wh_temp2_val">---</span> &deg;C</div>
-                        </div>
-                    </div>
-                    <div class="col-lg-2 col-md-2 col-sm-2 col-xs-4">
-                        <div class="wh_icon" id="wh_icon_temp60">
-                            <div class="wh_suffix">60см</div>
-                        </div>
-                        <div class="h_led" id="wh_temp60_led"></div>
-                        <div id="wh_temp3">
-                            <div class="wh_label hidden hidden-sm hidden-xs">Т. земли 60см</div>
-                            <div class="wh_val"><span id="wh_temp3_val">---</span> &deg;C</div>
-                        </div>
-                    </div>
+					<div class="col-lg-1 col-md-1 col-sm-2 col-xs-4 col-lg-offset-2  col-md-offset-2">
+						<div class="wh_icon" id="wh_icon_refresh"></div>
+						<div class="h_led" id="wh_refresh_led"></div>
+						<div>
+							<div class="wh_updated wh_label wh_val hidden hidden-sm hidden-xs">Обновлено:</div>
+							<div class="wh_val"><span id="wh_upd_val">---</span></div>
+						</div>
+					</div>
+					<div class="col-lg-1 col-md-1 col-sm-2 col-xs-4">
+						<div class="wh_icon" id="wh_icon_humidity"></div>
+						<div class="h_led" id="wh_humidity_led"></div>
+						<div id="wh_wind">
+							<div class="wh_label hidden hidden-sm hidden-xs">Влажность</div>
+							<div class="wh_val"><span id="wh_humidity_val">---</span> %</div>
+						</div>
+					</div>
+					<div class="col-lg-1 col-md-1 col-sm-2 col-xs-4">
+						<div class="wh_icon" id="wh_icon_pressure"></div>
+						<div class="h_led" id="wh_pressure_led"></div>
+						<div id="wh_wind">
+							<div class="wh_label hidden hidden-sm hidden-xs">Давление</div>
+							<div class="wh_val"><span id="wh_pressure_val">---</span></div>
+						</div>
+					</div>
+					<div class="col-lg-1 col-md-1 col-sm-2 col-xs-4">
+						<div class="wh_icon" id="wh_icon_temp0">
+							<div class="wh_suffix">Воздух</div>
+						</div>
+						<div class="h_led" id="wh_temp0_led"></div>
+						<div id="wh_temp1">
+							<div class="wh_label hidden hidden-sm hidden-xs">Температура воздуха</div>
+							<div class="wh_val"><span id="wh_temp1_val">---</span> &deg;C</div>
+						</div>
+					</div>
+					<div class="col-lg-1 col-md-1 col-sm-2 col-xs-4">
+						<div class="wh_icon" id="wh_icon_tempavg">
+							<div class="wh_suffix">Средняя</div>
+						</div>
+						<div class="h_led" id="wh_tempavg_led"></div>
+						<div id="wh_tempavg">
+							<div class="wh_label hidden hidden-sm hidden-xs">Средняя темпаратура воздуха</div>
+							<div class="wh_val"><span id="wh_tempavg_val">---</span> &deg;C</div>
+						</div>
+					</div>
+					<div class="col-lg-1 col-md-1 col-sm-2 col-xs-4">
+						<div class="wh_icon" id="wh_icon_temp15">
+							<div class="wh_suffix">15см</div>
+						</div>
+						<div class="h_led" id="wh_temp15_led"></div>
+						<div id="wh_temp2">
+							<div class="wh_label hidden hidden-sm hidden-xs">Т. земли 15см</div>
+							<div class="wh_val"><span id="wh_temp2_val">---</span> &deg;C</div>
+						</div>
+					</div>
+					<div class="col-lg-1 col-md-1 col-sm-2 col-xs-4">
+						<div class="wh_icon" id="wh_icon_temp60">
+							<div class="wh_suffix">60см</div>
+						</div>
+						<div class="h_led" id="wh_temp60_led"></div>
+						<div id="wh_temp3">
+							<div class="wh_label hidden hidden-sm hidden-xs">Т. земли 60см</div>
+							<div class="wh_val"><span id="wh_temp3_val">---</span> &deg;C</div>
+						</div>
+					</div>	
                 </div>
             </div>
         </div>
-
     </div>
     <div class="danger_field"></div>
     <div id="fancytemp" class="container"></div>
