--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@
 
     <link rel="icon" sizes="192x192" href="/style/logo.png">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.1/css/font-awesome.min.css">
-    <link rel="stylesheet" href="style/dark.css">
-    <link rel="stylesheet" href="style/z_plane.css">
-    <link rel="stylesheet" href="style/lightbox.css">
-    <link rel="stylesheet" href="fancybox/jquery.fancybox.css">
+    <link rel="stylesheet" href="style/dark.css?v1.0.1">
+    <link rel="stylesheet" href="style/z_plane.css?v1.0.1">
+    <link rel="stylesheet" href="style/lightbox.css?v1.0.1">
+    <link rel="stylesheet" href="fancybox/jquery.fancybox.css?v1.0.1">
     <link rel="stylesheet" href="jquery-ui-1.11.4/jquery-ui.css">
     <link href='https://fonts.googleapis.com/css?family=Cinzel' rel='stylesheet' type='text/css'>
     <link href='https://fonts.googleapis.com/css?family=Quicksand:400,700' rel='stylesheet' type='text/css'>
@@ -29,48 +29,49 @@
     <!-- Latest compiled and minified JavaScript -->
 
 
-    <script src="/js/global.js"></script>
+    <script src="/js/global.js?v1.0.1"></script>
 
     <script src="/js/jquery-1.11.3.js"></script>
     <script src="jquery-ui-1.11.4/jquery-ui.js"></script>
 
-    <script src="/js/console.js"></script>
+    <script src="/js/console.js?v1.0.1"></script>
 
-    <script src="/js/notifycenter.js"></script>
+    <script src="/js/notifycenter.js?v1.0.1"></script>
 
-    <script src="/js/auth.js"></script>
-    <script src="/js/storage.js"></script>
+    <script src="/js/auth.js?v1.0.1"></script>
+    <script src="/js/storage.js?v1.0.1"></script>
 
-	<script src="/js/windcore.js"></script>
-    <script src="/js/updater.js"></script>
-    <script src="/js/refresher.js"></script>
+	<script src="/js/windcore.js?v1.0.1"></script>
+    <script src="/js/updater.js?v1.0.1"></script>
+    <script src="/js/refresher.js?v1.0.1"></script>
 
-    <script src="/js/start.js"></script>
+    <script src="/js/start.js?v1.0.1"></script>
 
-    <script src="/js/color_led.js"></script>
-    <script src="/js/trends.js"></script>
-    <script src="/js/weatherparser.js"></script>
+    <script src="/js/color_led.js?v1.0.1"></script>
+    <script src="/js/trends.js?v1.0.1"></script>
+    <script src="/js/weatherparser.js?v1.0.1"></script>
 
-    <script src="/js/lightbox.js"></script>
+    <script src="/js/lightbox.js?v1.0.1"></script>
 
-    <script src="/js/detect.js"></script>
+    <script src="/js/detect.js?v1.0.1"></script>
 
-    <script src="/js/loadend.js"></script>
+    <script src="/js/loadend.js?v1.0.1"></script>
 
-    <script src="/js/events.js"></script>
-    <script src="/js/private.js"></script>
+    <script src="/js/events.js?v1.0.1"></script>
+    <script src="/js/private.js?v1.0.1"></script>
 
-    <script src="/js/router.js"></script>
+    <script src="/js/router.js?v1.0.1"></script>
 
     <!--Google Maps-->
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCGc1IlCuJd173d1Q1685Eya-Cs7NJ5HOU"></script>
-    <script src="/js/maps.js"></script>
-    <script src="/js/hgmap.js"></script>
+    <script src="/js/maps.js?v1.0.1"></script>
+    <script src="/js/hgmap.js?v1.0.1"></script>
 
-    <script src="/fancybox/jquery.fancybox.pack.js"></script>
-    <script src="/fancybox/jquery.fancybox.js"></script>
+    <script src="/fancybox/jquery.fancybox.js?v1.0.1"></script>
+    <script src="/fancybox/jquery.fancybox.pack.js?v1.0.1"></script>
 
-    <script src="/js/checkform.js"></script>
+
+    <script src="/js/checkform.js?v1.0.1"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
     <script src="https://code.highcharts.com/stock/highstock.js"></script>
     <script src="https://code.highcharts.com/highcharts-more.js"></script>
@@ -85,8 +86,8 @@
         <div id="emer_code" class="col-xs-12 col-md-12 col-sm-12 col-lg-12 text-center myhide">ВНИМАНИЕ!!! <span id="emer_code_msg"></span></div>
         <div id="console" class="col-xs-12 col-md-12 col-sm-12 col-lg-12 hideconsole"></div>
 
-        <div class="logo col-lg-2 col-md-2 hidden-sm hidden-xs">HELL GAME</div>
-        <div class="logo col-xs-12 visible-xs visible-sm text-center">HELL GAME</div>
+        <div class="logo col-lg-2 col-md-2 hidden-sm hidden-xs">HellGame24</div>
+        <div class="logo col-xs-12 visible-xs visible-sm text-center">HellGame24</div>
 
         <div id="widget_uc_ssv" class="user_card_wrapper col-lg-3 col-md-3 col-sm-3 col-xs-5">
             <div class="ssv_card user_card container-fluid">
@@ -533,10 +534,23 @@
         </div>
     </div>
     <div class="danger_field"></div>
+
     <div id="fancytemp" class="container"></div>
     <div id="wrapper">
         <div id="container" class="container"></div>
     </div>
+
+
     <div id="footer"></div>
+    <div id="fancydemo" style="display: none">
+        <div class="row fb text-center">
+            <h1>Сообщение системы HellGame24 <span class="version">Generic version</span></h1>
+            <h1 class="fa fa-lock fa-4x"></h1>
+            <h3 class="rn_color">Система загружается</h3>
+            <h3 class="rn_color">Пожалуйста подождите...</h3>
+            <!--<h4 class="rn_color">Последние изменения:</h4>-->
+            <!--<ul class="verdescription"></ul>-->
+        </div>
+    </div>
 </body>
 </html>
