--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
         <div class="logo col-lg-2 col-md-2 hidden-sm hidden-xs">HellGame24</div>
         <div class="logo col-xs-12 visible-xs visible-sm text-center">HellGame24</div>
 
-        <div id="widget_uc_ssv" class="user_card_wrapper col-lg-3 col-md-3 col-sm-3 col-xs-5">
+        <div id="widget_uc_ssv" class="user_card_wrapper col-lg-3 col-md-3 col-sm-3 col-xs-12">
             <div class="ssv_card user_card container-fluid">
                 <div class="user_card_photo col-lg-4 col-md-4 col-sm-4 col-xs-4"></div>
                 <div class="user_card_desc col-lg-8 col-md-8 col-sm-8 col-xs-8">
@@ -112,7 +112,7 @@
                 <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 code_msg"></div>
             </div>
         </div>
-        <div id="widget_uc_msn" class="user_card_wrapper col-lg-3 col-md-3 col-sm-3 col-xs-5">
+        <div id="widget_uc_msn" class="user_card_wrapper col-lg-3 col-md-3 col-sm-3 col-xs-12">
             <div class="ssv_card user_card container-fluid">
                 <div class="user_card_photo msn_photo_min col-lg-4 col-md-4 col-sm-4 col-xs-4"></div>
                 <div class="user_card_desc col-lg-8 col-md-8 col-sm-8 col-xs-8">
@@ -135,7 +135,7 @@
                 <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 code_msg"></div>
             </div>
         </div>
-        <div id="widget_weather" class="user_card_wrapper col-lg-1 col-md-1 col-sm-1 col-xs-2 col-lg-offset-0 col-md-offset-0 col-sm-offset-0 col-xs-offset-0">
+        <div id="widget_weather" class="user_card_wrapper col-lg-1 col-md-1 col-sm-1 col-xs-12 col-lg-offset-0 col-md-offset-0 col-sm-offset-0 col-xs-offset-0">
             <div class="weather_card user_card container-fluid">
                 <div class="weather_desc">
                     <div class="weather_icon"></div>
@@ -533,7 +533,7 @@
             </div>
         </div>
     </div>
-    <div class="danger_field"></div>
+    <!--<div class="danger_field"></div>-->
 
     <div id="fancytemp" class="container"></div>
     <div id="wrapper">
