news module dev start 2

--- a/index.html
+++ b/index.html
@@ -569,12 +569,12 @@
                         <div class="newsTitle">
                             <div class="newsAuthor">
                                 <img class="newsAuthorImg" src="photo/ssv_min.jpg">
-                                <span>Новость создал </span>
+                                <span class="hidden-xs">Новость создал </span>
                                 <span class="newsAutorName">SSV</span>
                                 <span class="newsTimeCreate">20.04.2017 в 20:34</span>
                             </div>
 
-                            <div class="newsApproved text-right">
+                            <div class="newsApproved text-right hidden-xs">
                                 <span>Принято: </span>
                                 <img class="newsAuthorImg" src="photo/msn_min.jpg">
                                 <span class="newsAutorName">MSN</span>
